--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
   </head>
   <body>
     <div id="container">
-      <div id="title">
-        <h1>TO DO LIST</h1>
-      </div>
-      <div id="content">
-        <input type="text" name="Tarefa" translate="yes">
-        <button id="button">Adicionar Tarefa</button>
-      </div>
-      <div id="list">
-        
-      </div>
+        <div id="title">
+            <h1>TO DO LIST</h1>
+        </div>
+            <div id="content">
+                <form>
+                    <input id="task-form"  type="text">
+                    <button id="button">Adicionar Tarefa</button>
+                    <div #id="task-list"> </div>
+            </div>
+    </form>
     </div>
     <script src="./assets/js/index.js"></script>
   </body>
