--- a/index.html
+++ b/index.html
@@ -8,16 +8,31 @@
   </head>
   <body>
     <div id="container">
-        <div id="title">
-            <h1>TO DO LIST</h1>
+      <div id="header">
+        <h1>Contador de pontos</h1>
+        <h2>Digite os nomes dos times abaixo</h2>
+        <div id="inputs">
+          <form>
+            <input type="text" name="time1" placeholder="Time 1" /><button>
+              +
+            </button>
+            <input type="text" name="time2" placeholder="Time 2" /><button>
+              +
+            </button>
+            <button>Limpar times</button>
+          </form>
         </div>
-            <div id="content">
-                <form>
-                    <input id="task-form"  type="text">
-                    <button id="button">Adicionar Tarefa</button>
-                    <div #id="task-list"> </div>
-            </div>
-    </form>
+      </div>
+      <div id="placar">
+        <div>
+          <h2>Pontuação Time 1</h2>
+          <p id="pontos1"></p>
+        </div>
+        <div>
+          <h2>Pontuação Time 2</h2>
+          <p id="pontos2"></p>
+        </div>
+      </div>
     </div>
     <script src="./assets/js/index.js"></script>
   </body>
