testando funç~eos

--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
         <h2>Digite os nomes dos times abaixo</h2>
         <div id="inputs">
           <form>
-            <input type="text" name="time1" placeholder="Time 1" /><button>
+            <input type="text" name="time1" placeholder="Time 1" />
+            <button id="bt" onclick="button">
               +
             </button>
-            <input type="text" name="time2" placeholder="Time 2" /><button>
+            <input type="text" name="time2" placeholder="Time 2" />
+            <button>
               +
             </button>
             <button>Limpar times</button>
