--- a/index.html
+++ b/index.html
@@ -7,34 +7,8 @@
     <title>Placar de times</title>
   </head>
   <body>
-    <div id="container">
-      <div id="header">
-        <h1>Contador de pontos</h1>
-        <h2>Digite os nomes dos times abaixo</h2>
-        <div id="inputs">
-          <form>
-            <input type="text" name="time1" placeholder="Time 1" />
-            <button id="bt" onclick="button">
-              +
-            </button>
-            <input type="text" name="time2" placeholder="Time 2" />
-            <button>
-              +
-            </button>
-            <button>Limpar times</button>
-          </form>
-        </div>
-      </div>
-      <div id="placar">
-        <div>
-          <h2>Pontuação Time 1</h2>
-          <p id="pontos1"></p>
-        </div>
-        <div>
-          <h2>Pontuação Time 2</h2>
-          <p id="pontos2"></p>
-        </div>
-      </div>
+    <div>
+      <h1>Oolá mundo, confira o console pressioando F12</h1>
     </div>
     <script src="./assets/js/index.js"></script>
   </body>
