Criando classes com JS
Criando a classe tipoHeroi onde é definido o tipo de herói e trás um resultado mostrando qual o heroi e tipo de poder que ele possui

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div>
-      <h1>Oolá mundo, confira o console pressioando F12</h1>
+      <h1>Olá mundo, confira o console pressioando F12</h1>
     </div>
     <script src="./assets/js/index.js"></script>
   </body>
